# poi-pal

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/client/: eth.rs  ipfs.rs  mod.rs  poi.rs  registry.rs  subgraph.rs  update.rs
src/commands/: divergence.rs  mod.rs  poi.rs
src/models/: mod.rs
src/utils/: mod.rs
