[package]
name = "poipal"
version = "0.1.0"
edition = "2021"
authors = ["Shiyas <shiyasmohd.official@gmail.com>"]
description = "Blazing fast CLI tool for Proof of Indexing (POI) Investigations on The Graph"
repository = "https://github.com/shiyasmohd/poi-pal"
license = "MIT"
keywords = ["poi","subgraph", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
graph-networks-registry = "0.7.0"
regex = "1.11.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
update-informer = "1.1"
